IEP-1686: Fix for eim download getting stuck (#1387)
* IEP-1686: Fix for eim download getting stuck

* cleaned and better design for eim launch

* fix for welcome page